# reclaim-neutronterra-sdk

./: README.md
Neutron-Client/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
Neutron-Client/contracts/neutron-ibc/: Cargo.toml
Neutron-Client/contracts/neutron-ibc/examples/: schema.rs
Neutron-Client/contracts/neutron-ibc/src/: ibc.rs
Neutron-Client/scripts/: deploy.ts  query.ts  verifyProof.ts
Neutron-IBC/: README.md  package.json  wasmkit.config.example.js
Neutron-IBC/contracts/neutron-ibc/: Cargo.toml
Neutron-IBC/contracts/neutron-ibc/schema/: execute_msg.json  ibc_execute_msg.json  query_msg.json
Neutron-IBC/contracts/neutron-ibc/src/: contract.rs  msg.rs
Neutron-IBC/scripts/: deploy.ts  verifyProof.ts
Terra-host/: .gitignore  README.md  package-lock.json  package.json  wasmkit.config.example.js
Terra-host/Terra/: deployTerra.js
Terra-host/contracts/terra-host/: Cargo.toml
Terra-host/contracts/terra-host/examples/: schema.rs
Terra-host/contracts/terra-host/schema/: execute_msg.json  query_result_response.json
Terra-host/contracts/terra-host/src/: ack.rs  contract.rs  ibc.rs  msg.rs  state.rs
Terra-host/scripts/: .env  .env.example  deploy.js  package-lock.json  package.json  query.js
